[gd_scene load_steps=5 format=3 uid="uid://tpxumytrh032"]

[ext_resource type="Script" path="res://crisisPhase/status_bars.gd" id="1_m4dni"]
[ext_resource type="Texture2D" uid="uid://dodrjlcgbbf5j" path="res://res/gui/icons/icon_statusbar_nutrition.png" id="2_8ckcn"]
[ext_resource type="Texture2D" uid="uid://bqq5vbmiv8nrr" path="res://res/gui/icons/icon_statusbar_hydration.png" id="3_wao4g"]
[ext_resource type="Texture2D" uid="uid://dhj4hfky75aeg" path="res://res/gui/icons/icon_statusbar_health.png" id="4_ebr56"]

[node name="StatusBars" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 15.0
offset_bottom = 15.0
script = ExtResource("1_m4dni")

[node name="HBoxContainer5" type="HBoxContainer" parent="."]
layout_mode = 2
offset_bottom = 30.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer5"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer5/VBoxContainer"]
layout_mode = 2

[node name="ContainerNutrition" type="Container" parent="HBoxContainer5/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NutritionIcon" type="Sprite2D" parent="HBoxContainer5/VBoxContainer/HBoxContainer2/ContainerNutrition"]
position = Vector2(40, 15)
scale = Vector2(1.25, 1.25)
texture = ExtResource("2_8ckcn")

[node name="NutritionBar" type="ProgressBar" parent="HBoxContainer5/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
max_value = 2200.0
step = 1.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer5/VBoxContainer"]
layout_mode = 2

[node name="ContainerHydration" type="Container" parent="HBoxContainer5/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="HydrationIcon" type="Sprite2D" parent="HBoxContainer5/VBoxContainer/HBoxContainer/ContainerHydration"]
position = Vector2(40, 15)
scale = Vector2(1.25, 1.25)
texture = ExtResource("3_wao4g")

[node name="HydrationBar" type="ProgressBar" parent="HBoxContainer5/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
max_value = 2000.0
step = 25.0
show_percentage = false

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer5"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer5/VBoxContainer2"]
layout_mode = 2

[node name="ContainerHealth" type="Container" parent="HBoxContainer5/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="HealthIcon" type="Sprite2D" parent="HBoxContainer5/VBoxContainer2/HBoxContainer3/ContainerHealth"]
position = Vector2(40, 15)
scale = Vector2(1.25, 1.25)
texture = ExtResource("4_ebr56")

[node name="HealthBar" type="ProgressBar" parent="HBoxContainer5/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
step = 25.0
show_percentage = false

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer5/VBoxContainer2"]
layout_mode = 2

[node name="ContainerWellbeing" type="Container" parent="HBoxContainer5/VBoxContainer2/HBoxContainer4"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="HealthIcon" type="Sprite2D" parent="HBoxContainer5/VBoxContainer2/HBoxContainer4/ContainerWellbeing"]
position = Vector2(40, 15)
scale = Vector2(1.25, 1.25)
texture = ExtResource("4_ebr56")

[node name="WellbeingBar" type="ProgressBar" parent="HBoxContainer5/VBoxContainer2/HBoxContainer4"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
step = 25.0
show_percentage = false
